--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url(global.css);
-
+@import url(./global.css);
 
 body {
     font-family: var(--ff-texting);
@@ -11,8 +10,9 @@ body {
 }
 
 .page {
-    max-width: 33rem;
-    margin: 0 auto;
+    max-width: clamp(33rem, 30rem + 60vw, 117rem);
+    padding: 0 5rem;
+    margin: 0 auto 4rem;
 }
 
 img {
@@ -74,7 +74,7 @@ main {
     bottom: 5.2rem;
     left: 2.8rem;
 
-    font-size: var(--fs-heading);
+    font-size: var(--fs-heading-sm);
     font-weight: 800;
 
     display: flex;
