--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ main {
 .card img {
     height: 41.6rem;
     object-fit: cover;
+    opacity: 0.7;
 
     border-radius: 6px;
     transition: all 0.3s ease-in-out;
@@ -66,7 +67,7 @@ main {
 
 .card img:hover {
     transform: scale(1.1);
-    opacity: .5;
+    opacity: 1.1;
 }
 
 .card h2 {
